--- a/Week7/ex4.ipynb
+++ b/Week7/ex4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -37,21 +37,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# csv.DictReader : https://docs.python.org/2/library/csv.html\n",
+    "# As DictReader() is used to read a file obj (string buffer), convert line using StringIO.StringIO to convert a string to a string buffer. \n",
+    "# more about StringIO : https://docs.python.org/2/library/stringio.html\n",
+    "# If the \"fieldnames\" parameter is omitted, the values in the first row of the csvfile will be used as the fieldnames.\n",
+    "# Use .next() to get the next item. (Iterator)\n",
     "def csvLoader(line):\n",
     "    input = StringIO.StringIO(line)\n",
-    "    reader = csv.DictReader(input, fieldnames=[\"Zip\",\"Supervisor\"])\n",
-    "    return reader.next()"
+    "    reader = csv.DictReader(input, fieldnames=[\"Zip\",\"Supervisor\"]) \n",
+    "    return reader.next() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -74,91 +79,21 @@
        " {'Supervisor': '6', 'Zip': '94102'},\n",
        " {'Supervisor': '3', 'Zip': '94102'},\n",
        " {'Supervisor': '5', 'Zip': '94102'},\n",
-       " {'Supervisor': '8', 'Zip': '94103'},\n",
-       " {'Supervisor': '9', 'Zip': '94103'},\n",
-       " {'Supervisor': '10', 'Zip': '94103'},\n",
-       " {'Supervisor': '6', 'Zip': '94103'},\n",
-       " {'Supervisor': '3', 'Zip': '94103'},\n",
-       " {'Supervisor': '5', 'Zip': '94103'},\n",
-       " {'Supervisor': '6', 'Zip': '94104'},\n",
-       " {'Supervisor': '3', 'Zip': '94104'},\n",
-       " {'Supervisor': '6', 'Zip': '94105'},\n",
-       " {'Supervisor': '3', 'Zip': '94105'},\n",
-       " {'Supervisor': '10', 'Zip': '94107'},\n",
-       " {'Supervisor': '6', 'Zip': '94107'},\n",
-       " {'Supervisor': '6', 'Zip': '94108'},\n",
-       " {'Supervisor': '3', 'Zip': '94108'},\n",
-       " {'Supervisor': '2', 'Zip': '94109'},\n",
-       " {'Supervisor': '6', 'Zip': '94109'},\n",
-       " {'Supervisor': '3', 'Zip': '94109'},\n",
-       " {'Supervisor': '5', 'Zip': '94109'},\n",
-       " {'Supervisor': '8', 'Zip': '94110'},\n",
-       " {'Supervisor': '11', 'Zip': '94110'},\n",
-       " {'Supervisor': '9', 'Zip': '94110'},\n",
-       " {'Supervisor': '10', 'Zip': '94110'},\n",
-       " {'Supervisor': '6', 'Zip': '94111'},\n",
-       " {'Supervisor': '3', 'Zip': '94111'},\n",
-       " {'Supervisor': '7', 'Zip': '94112'},\n",
-       " {'Supervisor': '8', 'Zip': '94112'},\n",
-       " {'Supervisor': '11', 'Zip': '94112'},\n",
-       " {'Supervisor': '9', 'Zip': '94112'},\n",
-       " {'Supervisor': '10', 'Zip': '94112'},\n",
-       " {'Supervisor': '7', 'Zip': '94114'},\n",
-       " {'Supervisor': '8', 'Zip': '94114'},\n",
-       " {'Supervisor': '5', 'Zip': '94114'},\n",
-       " {'Supervisor': '2', 'Zip': '94115'},\n",
-       " {'Supervisor': '1', 'Zip': '94115'},\n",
-       " {'Supervisor': '5', 'Zip': '94115'},\n",
-       " {'Supervisor': '7', 'Zip': '94116'},\n",
-       " {'Supervisor': '4', 'Zip': '94116'},\n",
-       " {'Supervisor': '1', 'Zip': '94117'},\n",
-       " {'Supervisor': '7', 'Zip': '94117'},\n",
-       " {'Supervisor': '8', 'Zip': '94117'},\n",
-       " {'Supervisor': '5', 'Zip': '94117'},\n",
-       " {'Supervisor': '2', 'Zip': '94118'},\n",
-       " {'Supervisor': '1', 'Zip': '94118'},\n",
-       " {'Supervisor': '5', 'Zip': '94118'},\n",
-       " {'Supervisor': '2', 'Zip': '94121'},\n",
-       " {'Supervisor': '1', 'Zip': '94121'},\n",
-       " {'Supervisor': '1', 'Zip': '94122'},\n",
-       " {'Supervisor': '7', 'Zip': '94122'},\n",
-       " {'Supervisor': '5', 'Zip': '94122'},\n",
-       " {'Supervisor': '4', 'Zip': '94122'},\n",
-       " {'Supervisor': '2', 'Zip': '94123'},\n",
-       " {'Supervisor': '9', 'Zip': '94124'},\n",
-       " {'Supervisor': '10', 'Zip': '94124'},\n",
-       " {'Supervisor': '7', 'Zip': '94127'},\n",
-       " {'Supervisor': '8', 'Zip': '94127'},\n",
-       " {'Supervisor': '11', 'Zip': '94127'},\n",
-       " {'Supervisor': '2', 'Zip': '94129'},\n",
-       " {'Supervisor': '6', 'Zip': '94130'},\n",
-       " {'Supervisor': '7', 'Zip': '94131'},\n",
-       " {'Supervisor': '8', 'Zip': '94131'},\n",
-       " {'Supervisor': '5', 'Zip': '94131'},\n",
-       " {'Supervisor': '7', 'Zip': '94132'},\n",
-       " {'Supervisor': '11', 'Zip': '94132'},\n",
-       " {'Supervisor': '4', 'Zip': '94132'},\n",
-       " {'Supervisor': '2', 'Zip': '94133'},\n",
-       " {'Supervisor': '3', 'Zip': '94133'},\n",
-       " {'Supervisor': '11', 'Zip': '94134'},\n",
-       " {'Supervisor': '9', 'Zip': '94134'},\n",
-       " {'Supervisor': '10', 'Zip': '94134'},\n",
-       " {'Supervisor': '10', 'Zip': '94158'},\n",
-       " {'Supervisor': '6', 'Zip': '94158'}]"
+       " {'Supervisor': '8', 'Zip': '94103'}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_data.collect()"
+    "csv_data.take(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -176,6 +111,57 @@
    "outputs": [],
    "source": [
     "sf_supervisor.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# csvWriter : Save in a format of \"Supervisor, Zip\".\n",
+    "# csv.DictWriter : https://docs.python.org/2/library/csv.html#csv.DictWriter\n",
+    "# Values in the dictionary passed to .writerow() are written to \"output\".\n",
+    "def csvWriter(rdd):\n",
+    "    output = StringIO.StringIO() # start as an empty string buffer\n",
+    "    writer = csv.DictWriter(output, fieldnames=[\"Supervisor\", \"Zip\"])\n",
+    "    writer.writerow(rdd)\n",
+    "    return output.getvalue().strip() # strip() : delete \\r and \\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['8,94102', '6,94102', '3,94102', '5,94102', '8,94103']"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_data.map(csvWriter).take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "csv_data.map(csvWriter).saveAsTextFile(\"CSV_folder\")"
    ]
   },
   {
